--- a/src/App.css
+++ b/src/App.css
@@ -1,46 +1,10 @@
-.App {
-  text-align: center;
+html {
+  background-color: #f2eceb;
 }
 
 .app-title{
-  font-family: 'Martel', serif;
-  letter-spacing: 1vh;
+  font-family: 'Rozha One', serif;
+  letter-spacing: 6px;
+  color: #5c6e4a;
   text-align: center;
-  color: #c94927;
-}
-
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
