--- a/src/App.css
+++ b/src/App.css
@@ -8,3 +8,16 @@ html {
   color: #5c6e4a;
   text-align: center;
 }
+
+.title-container{
+  display: flex;
+  justify-content: center;
+}
+
+.app-logo{
+  width: 50px;
+  height: 50px;
+  margin-left: 5px;
+  justify-content: center;
+  margin-top: 10px;
+}
