--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,16 @@ html {
   margin-top: 10px;
 }
 
+.login-header {
+  font-family: "Gabarito", sans-serif;
+  letter-spacing: 2px;
+  font-size: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 ::-webkit-scrollbar {
   width: 4px;
 }
